--- a/package.json
+++ b/package.json
@@ -6,16 +6,26 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.9",
-    "@mui/material": "^5.14.10",
+    "@mui/material": "^5.14.11",
+    "@mui/x-date-pickers": "^6.16.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.10",
     "formik": "^2.4.5",
+    "js-cookie": "^3.0.5",
+    "lodash.isempty": "^4.4.0",
     "react": "^18.2.0",
+    "react-datepicker": "^4.18.0",
+    "react-day-picker": "^8.8.2",
     "react-dom": "^18.2.0",
+    "react-js-loader": "^0.1.2",
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-search-autocomplete": "^8.5.2",
+    "react-to-pdf": "^1.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.0"
   },
