--- a/package.json
+++ b/package.json
@@ -11,20 +11,24 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.2",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "formik": "^2.4.5",
     "js-cookie": "^3.0.5",
     "lodash.isempty": "^4.4.0",
     "react": "^18.2.0",
+    "react-autocomplete": "^1.8.1",
+    "react-bootstrap": "^2.9.0",
     "react-datepicker": "^4.18.0",
     "react-day-picker": "^8.8.2",
     "react-dom": "^18.2.0",
+    "react-dropdown": "^1.11.0",
+    "react-export-table-to-excel": "^1.0.6",
     "react-js-loader": "^0.1.2",
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
-    "react-search-autocomplete": "^8.5.2",
     "react-to-pdf": "^1.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.0"
