--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-autocomplete": "^1.8.1",
     "react-bootstrap": "^2.9.0",
+    "react-burger-menu": "^3.0.9",
     "react-csv": "^2.2.2",
     "react-datepicker": "^4.18.0",
     "react-day-picker": "^8.8.2",
