--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.2",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
+    "dompurify": "^3.0.6",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "formik": "^2.4.5",
